fixed the font size and responsiveness but the login container is too high for now so yee

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -18,3 +18,43 @@
 .login-button:hover {
   background-color: darkblue;
 }
+
+@media (max-width: 700px) {
+  .login-button {
+    width: 80px; /* Make button smaller */
+    height: 26px;
+    font-size: 1.8vw;
+  }
+
+  .login-footer {
+    font-size: 2vw;
+  }
+
+  .login-title {
+    font-size: 5vw;
+    margin: 0px;
+  }
+
+  @media (max-width: 430px) {
+    .login-button {
+      font-size: 3vw;
+    }
+  }
+
+  @media (max-width: 300px) {
+    .login-button {
+      width: 80px; /* Make button smaller */
+      height: 26px;
+      font-size: 5vw;
+    }
+
+    .login-footer {
+      font-size: 5vw;
+    }
+
+    .login-title {
+      font-size: 10vw;
+      margin: 0px;
+    }
+  }
+}
